tag matching improvements
changelog
example
logic impl